Fix overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,7 @@ body {
 }
 .card-register {
   height: 100% !important;
+  overflow: hidden;
 }
 .footer-container {
   background-color: #314B57;
